# tcalc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  index.html  justfile  package.json  release-plz.toml  tcalc_web.d.ts  tcalc_web.js  tcalc_web_bg.wasm  tcalc_web_bg.wasm.d.ts
.github/workflows/: release-plz.yml  wasm.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/: main.rs
core/: CHANGELOG.md  Cargo.toml
core/src/: calendar.rs  evaluator.rs  lexer.rs  lib.rs  parser.rs
core/tests/: properties.rs
src/: evaluator.rs  main.rs
web/: Cargo.toml  index.html
web/pkg/: index.html
web/src/: lib.rs
