[package]
name = "tcalc-cli"
version = "0.1.1"
edition = "2024"
authors = ["Domenico Cinque <domenico.cinque98@gmail.com>"]
description = "A CLI for time arithmetic."
license = "MIT"
repository = "https://github.com/domenicocinque/tcalc"
readme = "../README.md"

[dependencies]
tcalc_core = { version = "0.1.1", path= "../core" }
clap = { version = "4.5", features = ["derive"] }
