[package]
name = "tcalc_core"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Core library for tcalc-cli crate."
repository = "https://github.com/domenicocinque/tcalc"
readme = "../README.md"

[dependencies]
time = { version = "0.3", features = ["wasm-bindgen"] }
unscanny = "0.1.0"
