[package]
name = "tcalc_core"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Core library for tcalc-cli crate."
repository = "https://github.com/domenicocinque/tcalc"
readme = "../README.md"

[dependencies]
time = { version = "0.3", features = ["wasm-bindgen"] }
toml = "0.8"
unscanny = "0.1.0"

[dev-dependencies]
proptest = { version = "1", default-features = false, features = ["std"] }
