[package]
name = "tcalc-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
tcalc_core = {version = "0.1.0", path= "../core" }
wasm-bindgen = "0.2.104"
console_error_panic_hook = { version = "0.1.6", optional = true }
